syntax = "proto3";

package service.farm;
import "google/api/annotations.proto";
import "messages/user.proto";
import "messages/device.proto";
import "messages/device_log.proto";

option go_package = "farm/src/proto/service/farm";

service Farm {
  rpc Login (messages.user.LoginRequest) returns (messages.user.LoginResponse) {
    option (google.api.http) = {
      post: "/login"
      body: "*"
    };
  }

  rpc CreateDevice (messages.device.CreateDeviceRequest) returns (messages.device.CreateDeviceResponse) {
    option (google.api.http) = {
      post: "/device/create"
      body: "*"
    };
  }

  rpc GetDeviceLog (messages.device_log.GetDeviceLogRequest) returns (messages.device_log.GetDeviceLogResponse) {
    option (google.api.http) = {
      post: "/device/get_log"
      body: "*"
    };
  }
}